--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,13 @@ authors = ["Kloven <jloup.m@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-ping3 = "^4.0.3"
 tqdm = "^4.64.0"
-netaddr = "^0.8.0"
-pymongo = "^4.1.1"
+hilbertcurve = "^2.0.5"
+Pillow = "^9.3.0"
+
 
 [tool.poetry.dev-dependencies]
-black = {version = "^22.3.0", allow-prereleases = true}
+black = { version = "^22.3.0", allow-prereleases = true }
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
